# primes

./: CMakeLists.txt  LICENSE  README.md  primes_list.xlsx
include/: primes.h
src/: CMakeLists.txt  primes.cpp
tests/: CMakeLists.txt  fixture.h  isqrt_test.cpp  primes_test.cpp
